# artemis

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
examples/: grid_comparison.ipynb  side-by-side_comparison.ipynb  virtual_parameters.ipynb
notebooks/: grid_comparison.ipynb  side-by-side_comparison.ipynb  virtual_parameters.ipynb
src/artemis/: artemis.py  parameter.py  patient.py
