[metadata]
name = artemis
version = 0.1
author = Jonas Chromik
author_email = jonas.chromik@hpi.de
description = ARTEMIS: An Alarm Threshold Mining System
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/HPI-CH/artemis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Medical Science Apps

[options]
package_dir =
    = artemis
packages = find:
python_requires = >=3.6

[options.packages.find]
where = artemis